# waterbase

./: .gitignore  pyproject.toml
WaterBase/in/: sitemap.xml
WaterBase/src/: DatabaseManager.py  HTMLChunker.py  RagInterface.py  RagUI.py  SitemapScraper.py  WaterbaseBot.py  WebCrawler.py  WebScraper.py  adaptive_rag_example.py  agentic_rag_example.py  base_rag_example.py  custom_rag_example.py  langchain_rag_example.py  proto.py  sitemap_scraping.py
WaterBase/src/utils/: logger_utils.py
